@@ -3,6 +3,7 @@
 	- import files/folder too if media number mismatch but media name match
 	- display some debug output on whereisit xml import only if debug output is enabled
 	- whereisit xml import speedup
+	- comments in new style  now handled by whereisit xml import
 
 16. Jun 2011 Christoph Thielecke <crissi99@gmx.de>
 	- import media type (dvd) on whereisit xml import fixed
